<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GitHub User</string>
    <!-- Other string resources-->
    <string name="username">username
    </string>
    <string name="name">name
    </string>
    <string name="location">location
    </string>
    <string name="repository">10000
    </string>
    <string name="company">company
    </string>
    <string name="following">Mengikuti</string>
    <string name="follower">Pengikut</string>
    <string name="daily_reminder">Pengingat Harian Pukul 9.00</string>
    <string name="menu_setting">Setting</string>
    <string name="title_activity_settings">Pengaturan</string>
    <string name="sign_no_data">Tidak Ada Data</string>
    <string name="menu_users">Users</string>
    <string name="sign_no_connect">Tidak ada koneksi internet</string>
    <string name="switch_preference">switchBtn</string>
    <string name="title_activity_favorite">Favorite Users</string>
    <string name="set_alarm_success">Sukses! Reminder terpasang!</string>
    <string name="set_alarm_cancel">Reminder dibatalkan!</string>
    <string name="alarm_message">Jangan lupa kunjungi Github App untuk kepoin pengguna Github!</string>
    <string name="reminder">Pengingat</string>
    <string name="btn_message">Klik untuk On atau Off</string>
</resources>
