<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_search_white"
                android:title="@string/username"
                android:visible="false"
                app:actionViewClass="android.widget.SearchView"
                app:showAsAction="always|collapseActionView" />
        <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_list_white"
                android:title="@string/menu_users"
                android:visible="true"
                app:showAsAction="ifRoom"/>

        <item
                android:id="@+id/nav_set"
                android:icon="@drawable/ic_setting_white"
                android:title="@string/menu_setting"
                android:visible="true"
                app:showAsAction="ifRoom"/>
    </group>
</menu>