<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        tools:context=".DetailActivity">

    <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad"
            android:paddingBottom="20dp">

        <RelativeLayout
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/circle_border">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerVertical="true"
                    android:cropToPadding="true"
                    app:civ_border_color="#E6E5E5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_user"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="7dp"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_slab"
                    android:paddingTop="5dp"
                    android:paddingBottom="2dp"
                    android:text="@string/name"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_slab"
                    android:padding="5dp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:typeface="sans" />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/div"
                    android:dividerPadding="5dp"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                <TextView
                        android:id="@+id/tv_repo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_slab"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/repository"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_slab"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/location"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_slab"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/company"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:foregroundGravity="left|bottom"
            android:soundEffectsEnabled="true"
            android:visibility="visible"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|end"
            app:srcCompat="@drawable/ic_fav_border"
            app:useCompatPadding="true"
            tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_unfav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:foregroundGravity="left|bottom"
            android:soundEffectsEnabled="true"
            android:visibility="invisible"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|end"
            app:maxImageSize="30dp"
            app:srcCompat="@drawable/ic_fav_fill"
            app:useCompatPadding="true"
            tools:ignore="ContentDescription" />

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_folls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rellay1"
            android:visibility="visible"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_follow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabs_folls"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:id="@+id/sign_no_connect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:ignore="UseCompoundDrawables">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_noconnect"
                app:tint="@color/colorPrimary" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_no_connect" />
    </LinearLayout>


</RelativeLayout>